fix z-index for pinned

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -133,10 +133,12 @@ span.btn:hover, span.btn:active{
 .select-menu-button.minibutton {
   padding-right: 59px;
   width: 75px;
+  height: 25px;
 }
 
 span.minibutton{
   width: 123px;
+  height: 25px;  
 }
 
 
