--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -347,3 +347,7 @@ h2.title{
   font-size: 16px;
   border-bottom: 1px dashed #e3e3e3;
 }
+
+.pinned{
+  z-index:1002;
+}
